# train_grep

./: .gitignore  .pre-commit-config.yaml  README.md  arg_parser.py  boot.py  collector.py  commands.py  error.py  events.py  exceptions.py  file_logger.py  finder.py  handler.py  handlers.py  main.py  makefile  message_bus.py  model.py  mylogger.py  parsing.py  pyproject.toml  requirements.txt  stdout_logger.py  stout_logger.py  view.py
handler/: __init__.py  file.py  file_handler.py  file_logger.py  finder.py  logger.py  parser.py  std_out.py  std_out_logger.py  std_out_viewer.py
model/: __init__.py  vector.py
resources/: default.py
src/: boot.py
src/adapter/: __init__.py  file_repository.py
src/handler/: args.py  lines.py  logger.py  std_out.py
src/resources/: string.py
src/utiles/: util.py
tests/: conftest.py  resources.py  stub.py  test_boot.py  test_collector.py  test_command.py  test_commands.py  test_error.py  test_file_handler.py  test_finder.py  test_imutable_vector.py  test_mutable_vector.py  test_parser.py  test_std_error.py  test_std_out.py  test_std_out_error_handler.py  test_std_out_view.py  test_util.py  test_vector.py
