[tool.poetry]
name = "train_grep_python"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
result = "^0.13.1"



[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
mypy = "^1.6.1"
pytest = "^7.4.2"
pre-commit = "^3.5.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py312']

[tool.ruff]
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = ["ANN001", "ANN101", "ANN102", "D211", "D212", "PGH003", "BLE001", "A003", "E501", "D103", "D107"]
exclude = ["tests"]
